Customize index page

--- a/index.mdx
+++ b/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Demo API Portal
+title: Demo Docs Portal
 ---
 
 import {
@@ -28,8 +28,8 @@ export default LandingLayout;
 
 <Jumbotron>
   <NavBar location={props.location} standalone={false} />
-  <H1>Redocly training</H1>
-  <H2>A starter developer portal with training exercises</H2>
+  <H1>XRP Ledger for Developers</H1>
+  <H2>A developer portal with documentation, API help, and tutorials for the XRP Ledger.</H2>
   <Flex p={20} justifyContent="center">
     {/* <Button size="xlarge" to="https://app.redoc.ly">
       Redocly app
