Fix layout bugs and add class for sidebar

--- a/about/xrp-ledger-overview.mdx
+++ b/about/xrp-ledger-overview.mdx
@@ -1,13 +1,18 @@
 ---
 label: About
 seo:
-  title: XRPL Overview - XRPL.org
-  descrtion: '...'
+  title: XRPL Overview | XRPL.org
+  description: An introduction to the key benefits and features of the XRP Ledger, a public blockchain driven by the XRPL developer community.
+redirectFrom:
+  - /xrp-ledger-overview.html
 ---
-
 import XRPLedgerOverview from '../_components/pages/XRPLedgerOverview';
+import LayoutWrapper from '../_components/LayoutWrapper';
+
 import { EmptyLayout } from '@redocly/developer-portal/ui';
 
 export default EmptyLayout;
 
-<XRPLedgerOverview />
+<LayoutWrapper>
+  <XRPLedgerOverview />
+</LayoutWrapper>
