Use prefix and add redirect

--- a/about/history.mdx
+++ b/about/history.mdx
@@ -1,5 +1,7 @@
 ---
-title: Uses - XRPL.org
+title: History - XRPL.org
+redirectFrom:
+  - /history.html
 ---
 
 import History from "../_components/pages/History";
