fixed history read more button

--- a/about/history.mdx
+++ b/about/history.mdx
@@ -5,8 +5,11 @@ redirectFrom:
 ---
 
 import History from "../_components/pages/History";
+import LayoutWrapper from "../_components/LayoutWrapper";
 import { EmptyLayout } from "@redocly/developer-portal/ui";
 
 export default EmptyLayout;
 
-<History />
+<LayoutWrapper>
+  <History />
+</LayoutWrapper>
