xrp overview complete

--- a/about/xrp-overview.mdx
+++ b/about/xrp-overview.mdx
@@ -11,6 +11,8 @@ import LayoutWrapper from "../_components/LayoutWrapper";
 
 import { EmptyLayout } from "@redocly/developer-portal/ui";
 
+export default EmptyLayout; 
+
 <LayoutWrapper>
 <XRPOverview />
 </LayoutWrapper>
