community page finished

--- a/community/index.mdx
+++ b/community/index.mdx
@@ -1,3 +1,17 @@
-# Community
+---
 
-Placeholder for styled Community landing
+title: Community - XRPL.org
+redirectFrom:
+
+- /contribute.html
+
+---
+import Community from "../_components/pages/Community";
+import LayoutWrapper from "../_components/LayoutWrapper";
+import { EmptyLayout } from "@redocly/developer-portal/ui";
+
+export default EmptyLayout;
+
+<LayoutWrapper>
+  <Community/>
+</LayoutWrapper>
