Add Use Cases page (#15)
* Convert main body initial pass

* Add main classes

* Rename url

* Add History and remove unnecessary comments

* Undo site config changes

* Use prefix and add redirect

* Add prefix to usecases

* fix light theme text display issue

* add styled pages

* fixed history read more button

* wip xrp-overview

* xrp overview complete

* fixes for xrp overview

* events page done

* ambassador page done

* ambassadors fixed button + clean up

* faq page finished

* fix spacing  + background

* impact draft

* impact fix

* community page finished

* try heading font weight fix

* style fixes

* fix css displaying errors

* try css fix 2

* fix 3

* fix 4

* try fix 5

* fix 6

* final fix for image sizing

Co-authored-by: jonathanlei <jonathanlei98@gmail.com>

--- a/about/faq.mdx
+++ b/about/faq.mdx
@@ -1,17 +1,15 @@
 ---
-
-title: Community - XRPL.org
+title: FAQ - XRPL.org
 redirectFrom:
-
-- /contribute.html
-
+  - /faq.html
 ---
-import Community from "../_components/pages/Community";
+
+import Faq from "../_components/pages/Faq";
 import LayoutWrapper from "../_components/LayoutWrapper";
 import { EmptyLayout } from "@redocly/developer-portal/ui";
 
 export default EmptyLayout;
 
 <LayoutWrapper>
-  <Community/>
+  <Faq />
 </LayoutWrapper>
