--- a/about/history.mdx
+++ b/about/history.mdx
@@ -1,17 +1,15 @@
 ---
-
-title: Community - XRPL.org
+title: History - XRPL.org
 redirectFrom:
-
-- /contribute.html
-
+  - /history.html
 ---
-import Community from "../_components/pages/Community";
+
+import History from "../_components/pages/History";
 import LayoutWrapper from "../_components/LayoutWrapper";
 import { EmptyLayout } from "@redocly/developer-portal/ui";
 
 export default EmptyLayout;
 
 <LayoutWrapper>
-  <Community/>
+  <History />
 </LayoutWrapper>
