--- a/about/impact.mdx
+++ b/about/impact.mdx
@@ -1,17 +1,15 @@
 ---
-
-title: Community - XRPL.org
+title: Impact - XRPL.org
 redirectFrom:
-
-- /contribute.html
-
+  - /impact.html
 ---
-import Community from "../_components/pages/Community";
+
+import Impact from "../_components/pages/Impact";
 import LayoutWrapper from "../_components/LayoutWrapper";
 import { EmptyLayout } from "@redocly/developer-portal/ui";
 
 export default EmptyLayout;
 
 <LayoutWrapper>
-  <Community/>
+  <Impact />
 </LayoutWrapper>
