Fix some broken links

--- a/community/ambassadors.mdx
+++ b/community/ambassadors.mdx
@@ -1,3 +1,8 @@
+---
+title: Ambassadors
+redirectFrom:
+  - /ambassadors.html
+---
 import Ambassadors from "../_components/pages/Ambassadors";
 import { EmptyLayout } from "@redocly/developer-portal/ui";
 import LayoutWrapper from "../_components/LayoutWrapper";
