--- a/docs/code-samples/index.mdx
+++ b/docs/code-samples/index.mdx
@@ -1,3 +1,8 @@
+---
+title: Code Samples
+redirectFrom:
+  - /code-samples.html
+---
 import CodeSamples from "../../_components/CodeSamples.tsx";
 import { EmptyLayout } from "@redocly/developer-portal/ui";
 
