--- a/community/index.mdx
+++ b/community/index.mdx
@@ -1,9 +1,7 @@
 ---
-
-title: Community - XRPL.org
+title: Community
 redirectFrom:
-
-- /contribute.html
+  - /contribute.html
 
 ---
 import Community from "../_components/pages/Community";
