--- a/docs/tutorials/index.mdx
+++ b/docs/tutorials/index.mdx
@@ -9,7 +9,8 @@ The XRP Ledger tutorials walk you through the steps to learn and get started wit
 
 <XRPLCardDeck cols="1/3">
   <DeckCard title="Quickstart" to="./quickstart/index.md">
-    Placeholder description for the Quickstart goes here, <em>allowing HTML</em> but **not markdown**.<br /><br />Linebreaks are ignored so you'll need tags to force them with HTML.
+    Use a JavaScript test harness to send XRP, trade currencies, and mint and trade
+    NFTokens.
   </DeckCard>
   <DeckCard title="XRPL.org">
     This is the second card. Don't put links or regular line breaks in descriptions.
