Fix build & more links
- Fix typo in Community component that was breaking the build
- Add a fancy landing page for HTTP/WebSocket APIs page
- Add remaining blog entries to sidebar
- Fix several more links

--- a/404.mdx
+++ b/404.mdx
@@ -1,6 +1,7 @@
-
 import { Button, H1, WideTile, Flex } from '@redocly/developer-portal/ui';
+import LayoutWrapper from "./_components/LayoutWrapper";
 
+<LayoutWrapper>
 <H1>Page not found</H1>
 
 Oops! The information you're looking for is not here.
@@ -25,3 +26,4 @@ Oops! The information you're looking for is not here.
   Return to home page
 </Button>
 </Flex>
+</LayoutWrapper>
