--- a/dev-tools/index.mdx
+++ b/dev-tools/index.mdx
@@ -4,6 +4,7 @@
 
 import DevTools from "../_components/pages/DevTools";
 import { EmptyLayout } from "@redocly/developer-portal/ui";
-export default EmptyLayout;
-<DevTools />
+import LayoutWrapper from "../_components/LayoutWrapper";
+export { EmptyLayout };
 
+<DevTools />
