--- a/docs/dev-tools/index.mdx
+++ b/docs/dev-tools/index.mdx
@@ -1,5 +1,5 @@
 import DevTools from "../../_components/pages/DevTools";
 import { EmptyLayout } from "@redocly/developer-portal/ui";
-
-<DevTools />
-export default EmptyLayout;
+import LayoutWrapper from "../../_components/LayoutWrapper";
+export { EmptyLayout };
+<DevTools />;
