--- a/docs/tutorials/index.mdx
+++ b/docs/tutorials/index.mdx
@@ -7,14 +7,59 @@ import { XRPLCardDeck, DeckCard } from "../../_components/XRPLCardDeck";
 
 The XRP Ledger tutorials walk you through the steps to learn and get started with the XRP Ledger and to use the ledger for advanced use cases.
 
-<XRPLCardDeck cols="1/3">
+## Beginner Tutorials
+
+<XRPLCardDeck cols="1/2">
   <DeckCard title="Quickstart" to="./quickstart/index.md">
-    Placeholder description for the Quickstart goes here, <em>allowing HTML</em> but **not markdown**.<br /><br />Linebreaks are ignored so you'll need tags to force them with HTML.
+    The quickstart tutorial walks you through a test harness interface to try out the XRP Ledger.
   </DeckCard>
-  <DeckCard title="XRPL.org">
-    This is the second card. Don't put links or regular line breaks in descriptions.
+  <DeckCard title="My First XRPL-connected App" to="https://xrpl.org/get-started-using-http-websocket-apis.html" external>
+    This tutorial walks you through ways to access the XRP Ledger directly through the APIs of its core server software, `rippled`.
   </DeckCard>
-  <DeckCard title="Ripple Website" to="https://ripple.com" external>
+</XRPLCardDeck>
+
+<XRPLCardDeck cols="1/3">
+  <DeckCard title="My First XRPL-connected App" to="https://xrpl.org/get-started-using-python.html" externa;>
+    This tutorial walks you through the basics of building a very simple XRP Ledger-connected application using a pure Python library, xrpl.py. 
+  </DeckCard>
+  <DeckCard title="My First XRPL-connected App" to="https://xrpl.org/get-started-using-java.html" external>
+    This tutorial walks you through the basics of building a very simple XRP Ledger-connected application using a pure Java library, xrpl4j. 
+  </DeckCard>
+  <DeckCard title="My First XRPL-connected App" to="https://xrpl.org/get-started-using-javascript.html" external>
+    This tutorial walks you through the basics of building a very simple XRP Ledger-connected application in JavaScript or Typescript using the xrpl.js client library. 
+  </DeckCard>
+</XRPLCardDeck>
+
+## Tutorials to Manage the XRP Ledger Servers
+
+<XRPLCardDeck cols="1/3">
+  <DeckCard title="Install `rippled` Server" to="https://xrpl.org/install-rippled.html" external>
+    These tutorials describe the steps to install and update the `rippled` server on supported platforms. 
+  </DeckCard>
+  <DeckCard title="Configure `rippled` Server" to="https://xrpl.org/configure-rippled.html" external>
+    These tutorials describe the steps to customize your `rippled` server configuration.
+  </DeckCard>
+  <DeckCard title="Run `rippled` in Standalone Mode" to="https://xrpl.org/use-stand-alone-mode.html" external>
+    These tutorials describe the steps to run `rippled` in stand-alone mode and test features with a full network.
+  </DeckCard>
+</XRPLCardDeck>
+
+<XRPLCardDeck cols="1/1">
+  <DeckCard title="Install `Clio` Server " to="https://xrpl.org/install-clio-on-ubuntu.html">
+    This tutorials describes the steps to install the `Clio` server on Ubuntu platform.  
+  </DeckCard>
+</XRPLCardDeck>
+
+## Tutorials for XRP Ledger Usecases
+
+<XRPLCardDeck cols="1/3">
+  <DeckCard title="Build a Desktop Wallet" to="https://xrpl.org/build-a-desktop-wallet-in-python.html" external>
+    This tutorial demonstrates how to build a desktop wallet for the XRP Ledger using the Python programming language and various libraries.
+  </DeckCard>
+  <DeckCard title="How to Use an Escrow as a Smart Contract" to="https://xrpl.org/use-an-escrow-as-a-smart-contract.html" external>
+    This tutorial describes the high-level tasks that you need to complete to use an escrow as a smart contract.
+  </DeckCard>
+  <DeckCard title="How to Open a Payment Channel to Enable an Inter-Exchange Network" to="https://xrpl.org/open-a-payment-channel-to-enable-an-inter-exchange-network.html" external>
     This card is an external link to Ripple's website.
   </DeckCard>
 </XRPLCardDeck>
