fix displaying issue

--- a/docs/dev-tools/index.mdx
+++ b/docs/dev-tools/index.mdx
@@ -1,5 +1,7 @@
 import DevTools from "../../_components/pages/DevTools";
 import { EmptyLayout } from "@redocly/developer-portal/ui";
 import LayoutWrapper from "../../_components/LayoutWrapper";
-export { EmptyLayout };
+
+export default EmptyLayout;
+
 <DevTools />;
