--- a/docs/dev-tools/index.mdx
+++ b/docs/dev-tools/index.mdx
@@ -4,4 +4,6 @@ import LayoutWrapper from "../../_components/LayoutWrapper";
 
 export default EmptyLayout;
 
-<DevTools />;
+<LayoutWrapper>
+  <DevTools />
+</LayoutWrapper>
