Update cards and fix build error caused by a typo

--- a/docs/tutorials/index.mdx
+++ b/docs/tutorials/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: XRP Ledger Tutorials
+title: Tutorials
 ---
 import { XRPLCardDeck, DeckCard } from "../../_components/XRPLCardDeck";
 
@@ -9,44 +9,45 @@ The XRP Ledger tutorials walk you through the steps to learn and get started wit
 
 ## Beginner Tutorials
 
-<XRPLCardDeck cols="1/2">
+<XRPLCardDeck cols="1/3">
   <DeckCard title="Quickstart" to="./quickstart/index.md">
-    The quickstart tutorial walks you through a test harness interface to try out the XRP Ledger.
-  </DeckCard>
-  <DeckCard title="My First XRPL-connected App" to="https://xrpl.org/get-started-using-http-websocket-apis.html" external>
-    This tutorial walks you through ways to access the XRP Ledger directly through the APIs of its core server software, `rippled`.
+    This quickstart tutorial walks you through a test harness interface to try out the XRP Ledger.
   </DeckCard>
 </XRPLCardDeck>
 
-<XRPLCardDeck cols="1/3">
-  <DeckCard title="My First XRPL-connected App" to="https://xrpl.org/get-started-using-python.html" externa;>
-    This tutorial walks you through the basics of building a very simple XRP Ledger-connected application using a pure Python library, xrpl.py. 
+## Getting Started with SDKs
+
+These tutorials walk you through the basics of building a very simple XRP Ledger-connected application using SDKs.
+
+<XRPLCardDeck cols="1/4">
+  <DeckCard title="Python" to="https://xrpl.org/get-started-using-python.html" external>
+    Using xrpl.py, a pure Python library. 
   </DeckCard>
-  <DeckCard title="My First XRPL-connected App" to="https://xrpl.org/get-started-using-java.html" external>
-    This tutorial walks you through the basics of building a very simple XRP Ledger-connected application using a pure Java library, xrpl4j. 
+  <DeckCard title="Java" to="https://xrpl.org/get-started-using-java.html" external>
+    Using xrpl4j, a pure Java library. 
   </DeckCard>
-  <DeckCard title="My First XRPL-connected App" to="https://xrpl.org/get-started-using-javascript.html" external>
-    This tutorial walks you through the basics of building a very simple XRP Ledger-connected application in JavaScript or Typescript using the xrpl.js client library. 
+  <DeckCard title="JavaScript" to="https://xrpl.org/get-started-using-javascript.html" external>
+    Using the xrpl.js client library. 
+  </DeckCard>
+  <DeckCard title="HTTP & Websocket APIs" to="https://xrpl.org/get-started-using-http-websocket-apis.html" external>
+    Access the XRP Ledger directly through the APIs of its core server software, rippled.
   </DeckCard>
 </XRPLCardDeck>
 
 ## Tutorials to Manage the XRP Ledger Servers
 
-<XRPLCardDeck cols="1/3">
-  <DeckCard title="Install `rippled` Server" to="https://xrpl.org/install-rippled.html" external>
-    These tutorials describe the steps to install and update the `rippled` server on supported platforms. 
+<XRPLCardDeck cols="1/4">
+  <DeckCard title="Install rippled Server" to="https://xrpl.org/install-rippled.html" external>
+    These tutorials describe the steps to install and update the rippled server on supported platforms.
   </DeckCard>
-  <DeckCard title="Configure `rippled` Server" to="https://xrpl.org/configure-rippled.html" external>
-    These tutorials describe the steps to customize your `rippled` server configuration.
+  <DeckCard title="Configure rippled Server" to="https://xrpl.org/configure-rippled.html" external>
+    These tutorials describe the steps to customize your rippled server configuration.
   </DeckCard>
-  <DeckCard title="Run `rippled` in Standalone Mode" to="https://xrpl.org/use-stand-alone-mode.html" external>
-    These tutorials describe the steps to run `rippled` in stand-alone mode and test features with a full network.
+  <DeckCard title="Run rippled in Standalone Mode" to="https://xrpl.org/use-stand-alone-mode.html" external>
+    These tutorials describe the steps to run rippled in stand-alone mode and test features with a full network.
   </DeckCard>
-</XRPLCardDeck>
-
-<XRPLCardDeck cols="1/1">
-  <DeckCard title="Install `Clio` Server " to="https://xrpl.org/install-clio-on-ubuntu.html">
-    This tutorials describes the steps to install the `Clio` server on Ubuntu platform.  
+  <DeckCard title="Install Clio Server " to="https://xrpl.org/install-clio-on-ubuntu.html">
+    This tutorials describes the steps to install the Clio server on Ubuntu platform.  
   </DeckCard>
 </XRPLCardDeck>
 
@@ -60,6 +61,5 @@ The XRP Ledger tutorials walk you through the steps to learn and get started wit
     This tutorial describes the high-level tasks that you need to complete to use an escrow as a smart contract.
   </DeckCard>
   <DeckCard title="How to Open a Payment Channel to Enable an Inter-Exchange Network" to="https://xrpl.org/open-a-payment-channel-to-enable-an-inter-exchange-network.html" external>
-    This card is an external link to Ripple's website.
   </DeckCard>
 </XRPLCardDeck>
