--- a/docs/tutorials/index.mdx
+++ b/docs/tutorials/index.mdx
@@ -41,7 +41,7 @@ These tutorials walk you through the basics of building a very simple XRP Ledger
     These tutorials describe the steps to install and update the rippled server on supported platforms.
   </DeckCard>
   <DeckCard title="Configure rippled Server" to="https://xrpl.org/configure-rippled.html" external>
-    These tutorials describe the steps to customize your rippled server configuration.
+    These tutorials describe the steps to customize your <code>rippled</code> server configuration.
   </DeckCard>
   <DeckCard title="Run rippled in Standalone Mode" to="https://xrpl.org/use-stand-alone-mode.html" external>
     These tutorials describe the steps to run rippled in stand-alone mode and test features with a full network.
