--- a/docs/tutorials/index.mdx
+++ b/docs/tutorials/index.mdx
@@ -38,7 +38,7 @@ These tutorials walk you through the basics of building a very simple XRP Ledger
 
 <XRPLCardDeck cols="1/4">
   <DeckCard title="Install rippled Server" to="https://xrpl.org/install-rippled.html" external>
-    These tutorials describe the steps to install and update the rippled server on supported platforms.
+    These tutorials describe the steps to install and update the core XRP Ledger server.
   </DeckCard>
   <DeckCard title="Configure rippled Server" to="https://xrpl.org/configure-rippled.html" external>
     These tutorials describe the steps to customize your <code>rippled</code> server configuration.
