--- a/docs/tutorials/index.mdx
+++ b/docs/tutorials/index.mdx
@@ -30,7 +30,7 @@ These tutorials walk you through the basics of building a very simple XRP Ledger
     Using the xrpl.js client library. 
   </DeckCard>
   <DeckCard title="HTTP & Websocket APIs" to="https://xrpl.org/get-started-using-http-websocket-apis.html" external>
-    Access the XRP Ledger directly through the APIs of its core server software, rippled.
+    Access the XRP Ledger directly through the APIs of its core server.
   </DeckCard>
 </XRPLCardDeck>
 
