--- a/docs/tutorials/index.mdx
+++ b/docs/tutorials/index.mdx
@@ -44,7 +44,7 @@ These tutorials walk you through the basics of building a very simple XRP Ledger
     These tutorials describe the steps to customize your <code>rippled</code> server configuration.
   </DeckCard>
   <DeckCard title="Run rippled in Standalone Mode" to="https://xrpl.org/use-stand-alone-mode.html" external>
-    These tutorials describe the steps to run rippled in stand-alone mode and test features with a full network.
+    These tutorials describe the steps to run <code>rippled</code> in stand-alone mode and test features without a full network.
   </DeckCard>
   <DeckCard title="Install Clio Server " to="https://xrpl.org/install-clio-on-ubuntu.html">
     This tutorials describes the steps to install the Clio server on Ubuntu platform.  
