Add topics for payments and interoperability usecases

--- a/docs/use-cases/index.mdx
+++ b/docs/use-cases/index.mdx
@@ -8,20 +8,16 @@ import { XRPLCardDeck, DeckCard } from "../../_components/XRPLCardDeck";
 Rather than focus on features, these topics are centered on how you can use the XRP Ledger to solve real world business problems.
 
 <XRPLCardDeck cols="2/3">
-  <DeckCard title="Payment Channels" to="payments.md">
-    Use Payment Channels to channel payments.
+  <DeckCard title="Payments" to="./payments/index.mdx">
+    Send and receive payments on the XRP Ledger.
   </DeckCard>
-  <DeckCard title="Cross-currency Payments">
-    In the XRP Ledger, you can send cross-currency payments that exchange tokens, XRP, or
-    both.
-  </DeckCard>
-  <DeckCard title="Decentralized Exchange" to="./decentralized-exchange/index.mdx">
+  <DeckCard title="Decentralized Finance (DeFi)" to="./defi/index.mdx">
     Convert tokens from one currency to another on the decentralized exchange.
   </DeckCard>
   <DeckCard title="Tokenization" to="./tokenization/index.mdx">
     Create and trade fungible and non-fungible tokens on the XRP Ledger.
   </DeckCard>
-  <DeckCard title="Interoperability" to="interoperability.md">
+  <DeckCard title="Interoperability" to="./interoperability/index.mdx">
     Create bridges between the XRP Ledger and other cryptocurrency networks.
   </DeckCard>
 </XRPLCardDeck>
