Incorporate editorial feedback

--- a/docs/use-cases/interoperability/index.mdx
+++ b/docs/use-cases/interoperability/index.mdx
@@ -9,9 +9,9 @@ These use cases focus on capabilities on the XRP Ledger to interact with other c
 
 <XRPLCardDeck cols="1/3">
   <DeckCard title="Sidechains (Beta)" to="sidechains.md">
-    Run an independent ledger with its own consensus algorithm and transaction types and rules.
+    Run an independent ledger with its own consensus algorithm, transaction types, and rules.
   </DeckCard>
   <DeckCard title="XRPL Hooks" to="https://xrpl-hooks.readme.io/" external>
-    Hooks add smart contract functionality to the XRP Ledger: 'layer one' custom code to influence the behaviour and flow of transactions.
+    Hooks add smart contract functionality to the XRP Ledger: "layer one" custom code to influence the behavior and flow of transactions.
   </DeckCard>
 </XRPLCardDeck>
