--- a/docs/use-cases/payments/index.mdx
+++ b/docs/use-cases/payments/index.mdx
@@ -15,6 +15,6 @@ These use cases focus on payment capabilities of the XRP Ledger.
     As an individual buyer, I want to set up a payment channel to send cross-currency payments that exchange tokens, XRP, or both.
   </DeckCard>
   <DeckCard title="Escrow" to="escrow.md">
-    As an individual making a payment for a physical asset, I want to set up an escrow (conditional payments) and set aside XRP, and deliver the XRP later when certain conditions are met.
+    As an individual making a payment for a physical asset, I want to set up an escrow (conditional payments) and set aside XRP, then deliver the XRP later when certain conditions are met.
   </DeckCard>
 </XRPLCardDeck>
