--- a/docs/tutorials/index.mdx
+++ b/docs/tutorials/index.mdx
@@ -34,7 +34,7 @@ These tutorials walk you through the basics of building a very simple XRP Ledger
   </DeckCard>
 </XRPLCardDeck>
 
-## Tutorials for XRP Ledger Usecases
+## Tutorials for XRP Ledger Use Cases
 
 <XRPLCardDeck cols="1/3">
   <DeckCard title="Build a Desktop Wallet" to="https://xrpl.org/build-a-desktop-wallet-in-python.html" external>
