--- a/docs/infrastructure/index.mdx
+++ b/docs/infrastructure/index.mdx
@@ -5,28 +5,30 @@ import { XRPLCardDeck, DeckCard } from "../../_components/XRPLCardDeck";
 
 # XRP Ledger Infrastructure
 
-
 ### Manage the `rippled` Server
 
 <XRPLCardDeck cols="1/3">
-  <DeckCard title="Install rippled" to="https://xrpl.org/install-rippled.html" external>
+  <DeckCard title="Install rippled" to="rippled/installation/index.mdx">
     Install, configure, and manage the core server that powers the XRP Ledger.
   </DeckCard>
-  <DeckCard title="Configure rippled" to="https://xrpl.org/configure-rippled.html" external>
+  <DeckCard title="Configure rippled" to="rippled/configuration/index.mdx">
     Customize your rippled server configuration.
   </DeckCard>
-  <DeckCard title="Configure Peering" to="https://xrpl.org/configure-peering.html" external>
+  <DeckCard title="Configure Peering" to="rippled/configure-peering/index.mdx">
     Manually adjust which peers your server connects to, to maximize your server's availability and connectivity with the rest of the network.
   </DeckCard>
-  <DeckCard title="Test rippled in Stand-Alone Mode" to="https://xrpl.org/use-stand-alone-mode.html" external>
+  <DeckCard title="Test rippled in Stand-Alone Mode" to="rippled/stand-alone-mode/index.mdx">
     For new features and experiments, you can use Stand-Alone Mode to test features with a full network.
+  </DeckCard>
+  <DeckCard title="Troubleshooting" to="rippled/troubleshooting/index.mdx">
+    Troubleshoot all kinds of problems with the rippled server. 
   </DeckCard>
 </XRPLCardDeck>
 
 ### Manage the `Clio` Server
 
 <XRPLCardDeck cols="1/3">
-  <DeckCard title="Install Clio" to="https://xrpl.org/install-clio-on-ubuntu.html" external>
+  <DeckCard title="Install Clio" to="clio/install-clio-on-ubuntu.md">
     Install, configure, and manage the Clio server.
   </DeckCard>
 </XRPLCardDeck>
