Update infrastructure landing page text

--- a/docs/infrastructure/index.mdx
+++ b/docs/infrastructure/index.mdx
@@ -5,7 +5,11 @@ import { XRPLCardDeck, DeckCard } from "../../_components/XRPLCardDeck";
 
 # XRP Ledger Infrastructure
 
+Learn how to set up, maintain, test, and troubleshoot the XRP Ledger.
+
 ### Manage the `rippled` Server
+
+Install, configure, and manage the core server that powers the XRP Ledger.
 
 <XRPLCardDeck cols="1/3">
   <DeckCard title="Install rippled" to="rippled/installation/index.mdx">
@@ -27,8 +31,10 @@ import { XRPLCardDeck, DeckCard } from "../../_components/XRPLCardDeck";
 
 ### Manage the `Clio` Server
 
+Install, configure, and manage the `Clio` server.
+
 <XRPLCardDeck cols="1/3">
   <DeckCard title="Install Clio" to="clio/install-clio-on-ubuntu.md">
-    Install, configure, and manage the Clio server.
+    Install a precompiled Clio binary on Ubuntu Linux.
   </DeckCard>
 </XRPLCardDeck>
